# aws-ofi-nccl

./: .clang-uml  .gitignore  CONTRIBUTING.md  Makefile.am  README.md  configure.ac  flake.nix  query-builder.txt  sgconfig.yml
.ci/aws/: README.md
.github/: codechecker.yaml
.github/workflows/: distcheck.yaml  nix.yaml  tag-makedist.yaml
.nix/: combos.nix  lib.nix  shell.nix
astgrep/rules/: anonymous-struct-type-alias.yml  no-malloc.yml  pointless-enum-alias.yml  redundant-enum-type-alias.yml  unnecessary-type-alias.yml  use-cpp-likelihood-hints.yml  use-std-min-std-max.yml
contrib/: cpp-port-literate.org  mkdocs.yml
contrib/python/: CMakeLists.txt  _logimpl.c  pyproject.toml
contrib/python/include/nnofi/detail/: log.hpp
contrib/python/ofi_nccl/: CMakeLists.txt
contrib/python/ofi_nccl/tuner/: CMakeLists.txt
contrib/python/ofi_nccl/tuner/bindings/: CMakeLists.txt  __init__.py  impl.cc
contrib/python/ofi_nccl/tuner/cli/: __main__.py  main.py  wrapper.py
contrib/tools/bind/: pyproject.toml
contrib/tools/bind/src/: main.cpp
contrib/tools/bind/src/bind/: __init__.py
contrib/tools/show-tuner-decisions/: CMakeLists.txt  pyproject.toml
contrib/tools/show-tuner-decisions/src/ofi_nccl/show_tuner_decisions/: defs.hpp  wrapper.py
contrib/tools/show-tuner-decisions/src/ofi_nccl/tuner_bindings/: __init__.py  impl.cc
include/: Makefile.am  concepts.hh  nccl_ofi.h  nccl_ofi.hh  nccl_ofi_api.hh  nccl_ofi_comm.hh  nccl_ofi_config_bottom.hh  nccl_ofi_conn_handle.hh  nccl_ofi_connection_info.hh  nccl_ofi_cuda.h  nccl_ofi_cuda.hh  nccl_ofi_deque.hh  nccl_ofi_device.hh  nccl_ofi_dmabuf.hh  nccl_ofi_endpoint.hh  nccl_ofi_endpoint_rail.hh  nccl_ofi_ep_addr_list.hh  nccl_ofi_freelist.h  nccl_ofi_freelist.hh  nccl_ofi_idpool.h  nccl_ofi_idpool.hh  nccl_ofi_listen_comm.hh  nccl_ofi_log.hh  nccl_ofi_math.hh  nccl_ofi_memcheck.hh  nccl_ofi_memcheck_asan.hh  nccl_ofi_memcheck_nop.hh  nccl_ofi_memcheck_valgrind.hh  nccl_ofi_mr.hh  nccl_ofi_msgbuff.hh  nccl_ofi_ofiutils.h  nccl_ofi_ofiutils.hh  nccl_ofi_param.h  nccl_ofi_param.hh  nccl_ofi_platform.hh  nccl_ofi_plugin.hh  nccl_ofi_properties.hh  nccl_ofi_pthread.h  nccl_ofi_pthread.hh  nccl_ofi_rdma.h  (+23 more)
include/aon/detail/transport/base/: communicator.hh  device.hh  domain.hh  listen_communicator.hh  recv_communicator.hh  request.hh  save_comm_state.hh  send_communicator.hh
include/aon/detail/transport/common/: dmabuf.hh  endpoint_address_list.hh
include/aon/detail/transport/rdma/: close_message.hh  connection_info.hh  constants.hh  control.hh  device.hh  domain.hh  endpoint.hh  listen_communicator.hh  plugin.hh  recv_communicator.hh  request.hh  send_communicator.hh
include/aon/detail/transport/rdma/reqs/: eager_copy.hh  op.hh  recv.hh  req_rx_buff.hh  send.hh  send_control.hh
include/aon/detail/types/: deque.hh  freelist.hh  msgbuff.hh
include/aon/detail/util/: memcheck.hh  tracepoint.hh
include/aon/detail/util/memcheck/: valgrind.hh
include/aon/detail/util/tracepoint/: lttng.hh
include/internal/tuner/: nccl_defaults.hh
include/tracing_impl/: lttng.h  lttng.hh  nvtx.h  nvtx.hh
include/tuner/: nccl_ofi_tuner.hh  nccl_ofi_tuner_common.h  nccl_ofi_tuner_common.hh  nccl_ofi_tuner_model.h  nccl_ofi_tuner_model.hh  nccl_ofi_tuner_region.hh
m4/: ax_check_ec2_instance.m4  check_pkg_uthash.m4
nix/: treefmt.nix  ubuntuTestRunners.nix
nix/cudaPackagesExtensions/: 0001-add-latest-nccl.nix  0002-use-latest-nccl.nix  0003-nccl-tests-use-mpi.nix  0004-add-ncclAws.nix  0005-add-nccl-tests-aws.nix  default.nix
nix/dev/: flake.nix  module.nix  shell.nix
nix/overlays/libfabric/: default.nix
nix/pkgs/aws-ofi-nccl/: cleanSource.nix  default.nix
src/: Makefile.am  nccl_ofi_accel.cc  nccl_ofi_api.c  nccl_ofi_api.cc  nccl_ofi_compat.cc  nccl_ofi_cuda.cc  nccl_ofi_deque.cc  nccl_ofi_dmabuf.cc  nccl_ofi_ep_addr_list.c  nccl_ofi_ep_addr_list.cc  nccl_ofi_freelist.c  nccl_ofi_freelist.cc  nccl_ofi_idpool.cc  nccl_ofi_interface_neuron.cc  nccl_ofi_interface_nvidia.c  nccl_ofi_interface_nvidia.cc  nccl_ofi_mr.c  nccl_ofi_mr.cc  nccl_ofi_msgbuff.c  nccl_ofi_msgbuff.cc  nccl_ofi_net.c  nccl_ofi_net.cc  nccl_ofi_ofiutils.c  nccl_ofi_ofiutils.cc  nccl_ofi_param.cc  nccl_ofi_pthread.cc  nccl_ofi_rdma.c  nccl_ofi_rdma.cc  nccl_ofi_scheduler.c  nccl_ofi_scheduler.cc  nccl_ofi_sendrecv.c  nccl_ofi_sendrecv.cc  nccl_ofi_system.cc  nccl_ofi_topo.c  nccl_ofi_topo.cc  platform-aws.c  platform-aws.cc  tracepoint.c  tracepoint.cc
src/tuner/: nccl_ofi_model.c  nccl_ofi_model.cc  nccl_ofi_regions.c  nccl_ofi_regions.cc  nccl_ofi_tuner.cc
tests/: Makefile.am
tests/functional/: .gitignore  Makefile.am  nccl_connection.cc  nccl_message_transfer.cc  ring.cc  test-common.hh
tests/unit/: .gitignore  Makefile.am  aws_platform_mapper.cc  deque.cc  ep_addr_list.c  ep_addr_list.cc  freelist.c  freelist.cc  idpool.cc  mr.cc  msgbuff.cc  region_based_tuner  region_based_tuner.c  region_based_tuner.cc  scheduler.c  scheduler.cc  show_tuner_decisions.cc  test-common.hh
topology/: Makefile.am
