######################################################################################
#  Copyright (c) 2018-2023 Amazon.com, Inc. or its affiliates. All rights reserved.  #
#  Copyright (c) 2015-2018, NVIDIA CORPORATION. All rights reserved.                 #
#                                                                                    #
######################################################################################

#
# Copyright (c) 2023-2024 Amazon.com, Inc. or its affiliates. All rights reserved.
#
# See LICENSE.txt for license information
#

noinst_HEADERS = \
	aon/detail/transport/base/communicator.hh \
	aon/detail/transport/base/connection_info.hh \
	aon/detail/transport/base/device.hh \
	aon/detail/transport/base/domain.hh \
	aon/detail/transport/base/endpoint.hh \
	aon/detail/transport/base/listen_communicator.hh \
	aon/detail/transport/base/plugin.hh \
	aon/detail/transport/base/recv_communicator.hh \
	aon/detail/transport/base/request.hh \
	aon/detail/transport/base/save_comm_state.hh \
	aon/detail/transport/base/send_communicator.hh \
	aon/detail/transport/common/dmabuf.hh \
	aon/detail/transport/common/endpoint_address_list.hh \
	aon/detail/transport/common/endpoint_rail.hh \
	aon/detail/transport/common/mr/cache.hh \
	aon/detail/transport/rdma/close_message.hh \
	aon/detail/transport/rdma/connection_info.hh \
	aon/detail/transport/rdma/constants.hh \
	aon/detail/transport/rdma/control.hh \
	aon/detail/transport/rdma/device.hh \
	aon/detail/transport/rdma/domain.hh \
	aon/detail/transport/rdma/endpoint.hh \
	aon/detail/transport/rdma/endpoint_name.hh \
	aon/detail/transport/rdma/listen_communicator.hh \
	aon/detail/transport/rdma/message_type.hh \
	aon/detail/transport/rdma/mr_handle.hh \
	aon/detail/transport/rdma/plugin.hh \
	aon/detail/transport/rdma/recv_communicator.hh \
	aon/detail/transport/rdma/reqs/eager_copy.hh \
	aon/detail/transport/rdma/reqs/flush.hh \
	aon/detail/transport/rdma/reqs/op.hh \
	aon/detail/transport/rdma/reqs/recv.hh \
	aon/detail/transport/rdma/reqs/recv_segms.hh \
	aon/detail/transport/rdma/reqs/req_rx_buff.hh \
	aon/detail/transport/rdma/reqs/send.hh \
	aon/detail/transport/rdma/reqs/send_close.hh \
	aon/detail/transport/rdma/reqs/send_control.hh \
	aon/detail/transport/rdma/request.hh \
	aon/detail/transport/rdma/send_communicator.hh \
	aon/detail/types/deque.hh \
	aon/detail/types/freelist.hh \
	aon/detail/types/idpool.hh \
	aon/detail/types/msgbuff.hh \
	aon/detail/util/memcheck.hh \
	aon/detail/util/memcheck/asan.hh \
	aon/detail/util/memcheck/nop.hh \
	aon/detail/util/memcheck/valgrind.hh \
	aon/detail/util/tracepoint.hh \
	aon/detail/util/tracepoint/lttng.hh \
	aon/detail/util/tracepoint/nvtx.hh \
	concepts.hh \
	internal/tuner/nccl_defaults.hh \
	nccl_ofi.hh \
	nccl_ofi_api.hh \
	nccl_ofi_config_bottom.hh \
	nccl_ofi_conn_handle.hh \
	nccl_ofi_cuda.hh \
	nccl_ofi_log.hh \
	nccl_ofi_math.hh \
	nccl_ofi_ofiutils.hh \
	nccl_ofi_param.hh \
	nccl_ofi_platform.hh \
	nccl_ofi_properties.hh \
	nccl_ofi_pthread.hh \
	nccl_ofi_scheduler.hh \
	nccl_ofi_sendrecv.hh \
	nccl_ofi_system.hh \
	nccl_ofi_topo.hh \
	platform-aws.hh \
	tuner/nccl_ofi_tuner.hh \
	tuner/nccl_ofi_tuner_common.hh \
	tuner/nccl_ofi_tuner_model.hh \
	tuner/nccl_ofi_tuner_region.hh
