#
#Copyright(c) 2023 - 2024 Amazon.com, Inc.or its affiliates.All rights reserved.
#
#See LICENSE.txt for license information
#

noinst_HEADERS = nccl_ofi.hh nccl_ofi_api.hh nccl_ofi_config_bottom.hh nccl_ofi_cuda.hh nccl_ofi_deque.hh nccl_ofi_freelist.hh nccl_ofi_idpool.hh nccl_ofi_log
                         .hh nccl_ofi_math.hh nccl_ofi_memcheck.hh nccl_ofi_memcheck_asan.hh nccl_ofi_memcheck_nop.hh nccl_ofi_memcheck_valgrind.hh nccl_ofi_mr
                         .hh nccl_ofi_msgbuff.hh nccl_ofi_param.hh nccl_ofi_pthread.hh nccl_ofi_rdma.hh nccl_ofi_sendrecv.hh nccl_ofi_scheduler
                         .hh nccl_ofi_system.hh nccl_ofi_topo.hh tuner /
                     nccl_ofi_tuner.hh tuner / nccl_ofi_tuner_common.hh tuner / nccl_ofi_tuner_region.hh tuner /
                     nccl_ofi_tuner_model.hh nccl_ofi_ofiutils.hh nccl_ofi_dmabuf.hh nccl_ofi_tracepoint.hh tracing_impl / lttng.hh tracing_impl /
                     nvtx.hh internal / tuner / nccl_defaults.hh nccl_ofi_platform.hh nccl_ofi_ep_addr_list.hh platform -
                 aws.hh
