######################################################################################
#  Copyright (c) 2018-2023 Amazon.com, Inc. or its affiliates. All rights reserved.  #
#  Copyright (c) 2015-2018, NVIDIA CORPORATION. All rights reserved.                 #
#                                                                                    #
######################################################################################

#
# Copyright (c) 2018-2023, Amazon.com, Inc. or its affiliates. All rights reserved.
#
# See LICENSE.txt for license information
#

SUBDIRS = functional unit
