######################################################################################
#  Copyright (c) 2018-2023 Amazon.com, Inc. or its affiliates. All rights reserved.  #
#  Copyright (c) 2015-2018, NVIDIA CORPORATION. All rights reserved.                 #
#                                                                                    #
######################################################################################

#
# Copyright (c) 2020-2023, Amazon.com, Inc. or its affiliates. All rights reserved.
#
# See LICENSE.txt for license information
#

xmldir = ${pkgdatadir}/xml
dist_xml_DATA = g5.48xl-topo.xml p4d-24xl-topo.xml p4de-24xl-topo.xml p5.48xl-topo.xml
