[project]
name = "nccl-ofi-tuner"
version = "0.1.0"
authors = [
    { name = "Nicholas Sielicki", email = "nslick@amazon.com" }
]
requires-python = ">=3.12"
dependencies = []

[tool.scikit-build]
minimum-version = "build-system.requires"
build-dir = "build/{wheel_tag}"

[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.2.0"]
build-backend = "scikit_build_core.build"
